# darca-storage

./: .pre-commit-config.yaml  CONTRIBUTING.rst  MAINTAINERS.rst  Makefile  README.rst  api.html  coverage.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/darca_storage/: client.html  exceptions.html  factory.html
_modules/darca_storage/backends/: local_file_backend.html
_modules/darca_storage/connectors/: local.html
_modules/darca_storage/decorators/: scoped_backend.html
_modules/darca_storage/interfaces/: credential_aware.html  file_backend.html  storage_connector.html
_sources/: api.rst.txt  index.rst.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/darca_storage/: __init__.py  __version__.py  client.py  exceptions.py  factory.py
src/darca_storage/backends/: backend_resolver.py  local_file_backend.py  local_storage_connector.py
src/darca_storage/connectors/: local.py
src/darca_storage/decorators/: scoped_backend.py
src/darca_storage/environment/: storage_environment.py
src/darca_storage/interfaces/: credential_aware.py  file_backend.py  storage_connector.py
tests/: conftest.py  test_client.py  test_factory.py  test_scoped_backend.py  test_version.py
