[tool.poetry]
name = "darca-storage"
version = "0.0.1"
description = "Storage instance with file operation support for multiple backends."
authors = ["Roel Kist <roel.kist@gmail.com>"]
license = "LICENSE"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.13.2" 
darca-log-facility = "^0.1.0"
darca-exception = "^0.1.1"
darca-file-utils = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.7.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.8.3"
mypy = "^1.15.0"
mypy-extensions = "^1.1.0"
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"
pytest-asyncio = "^1.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
sphinxcontrib-plantuml = "^0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"